--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(as_regressor)
 export(explain)
 export(getPerturbFunProperties)
 export(initAnchors)
+export(makePerturbFun)
 export(model_type)
 export(predict_model)
 export(printExplanations)
