--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,5 +23,6 @@ SystemRequirements: Java Runtime Environment (JRE)
 Suggests: 
     testthat,
     mlr,
-    h2o
+    h2o,
+    knitr
 RoxygenNote: 6.1.1
