--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,6 @@
 S3method(anchors,data.frame)
 S3method(anchors,getConnection)
 S3method(explain,data.frame)
-S3method(getPerturbFunProperties,PerturbFun)
-S3method(getPerturbFunProperties,character)
 S3method(model_type,H2OModel)
 S3method(model_type,WrappedModel)
 S3method(model_type,anchors_classifier)
@@ -16,15 +14,16 @@ S3method(predict_model,H2OModel)
 S3method(predict_model,WrappedModel)
 S3method(predict_model,default)
 S3method(predict_model,model_fit)
-S3method(print,PerturbFun)
 export(anchors)
 export(as_classifier)
 export(as_regressor)
 export(explain)
-export(getPerturbFunProperties)
 export(initAnchors)
-export(makePerturbFun)
+export(makePerturbator)
 export(model_type)
+export(perturbTabular)
+export(perturbTabularDisc)
+export(perturbate)
 export(predict_model)
 export(printExplanations)
 export(shutdown)
