Added export to Namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(perturbate)
 export(predict_model)
 export(printExplanations)
 export(shutdown)
+export(plotExplanations)
 importFrom(stats,density)
 importFrom(stats,predict)
 importFrom(stats,quantile)
