--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,6 @@ S3method(predict_model,H2OModel)
 S3method(predict_model,WrappedModel)
 S3method(predict_model,default)
 S3method(predict_model,model_fit)
-export(.getConnection)
 export(anchors)
 export(as_classifier)
 export(as_regressor)
@@ -29,3 +28,17 @@ export(plotExplanations)
 export(predict_model)
 export(printExplanations)
 export(shutdown)
+importFrom(grDevices,adjustcolor)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,dev.size)
+importFrom(grDevices,terrain.colors)
+importFrom(graphics,axis)
+importFrom(graphics,barplot)
+importFrom(graphics,layout)
+importFrom(graphics,legend)
+importFrom(graphics,par)
+importFrom(graphics,plot)
+importFrom(graphics,strheight)
+importFrom(graphics,strwidth)
+importFrom(graphics,text)
+importFrom(stats,predict)
